TP6/list-makefile/test.log

####
#### Compilation
####
cc    -c -o tests.o tests.c
cc    -c -o linked-list.o linked-list.c
linked-list.c: In function ‘ll_free’:
linked-list.c:55:10: error: ‘new_element’ undeclared (first use in this function)
   55 |     free(new_element);
      |          ^~~~~~~~~~~
linked-list.c:55:10: note: each undeclared identifier is reported only once for each function it appears in
make: *** [<commande interne> : linked-list.o] Erreur 1
